# python-hello-world

./: README.md  default.nix  dump.rdb  pyproject.toml
src/: main.py
