[project]
name = "python-hello-world"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Naufal Aldy Pradana", email = "blitzaldykazu@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
